# sqla_autoloads

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FAQ.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yaml  test.yaml
examples/: basic_usage.py  comparison.py  models.py  self_referential.py
src/sqla_autoloads/: __init__.py  core.py  datastructures.py  node.py  tools.py
tests/: conftest.py  models.py
tests/benchmarks/: test_benchmarks.py
tests/cases/: test_conditions.py  test_deep_loading.py  test_dotted_integration.py  test_dx.py  test_edge_cases.py  test_limit_orderby.py  test_limit_verification.py  test_load_all.py  test_load_all_deep.py  test_load_all_siblings.py  test_m2m.py  test_m2o.py  test_many_load.py  test_multi_fk.py  test_o2m.py  test_query_features.py  test_self_referential.py  test_sibling_loading.py  test_zip.py
tests/unit/: test_bfs.py  test_caching.py  test_dotted_paths.py  test_frozendict.py  test_node.py  test_selectbuilder.py  test_tools.py
